--- a/Cg/test-output/old/Suite/reporter-output.html
+++ b/Cg/test-output/old/Suite/reporter-output.html
@@ -1,1 +1,5 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>setting up report is ready</td></tr>
+<tr><td>Setting is done -test Can be statred</td></tr>
+<tr><td>Browser and application is up and running</td></tr>
+<tr><td>Report  is done->Test is completed</td></tr>
+</table>
